revision-1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bookinfo-revision-1-policy
  namespace: dev1
spec:
  podSelector:
    matchLabels:
      version: v1
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: productpage 
    ports:
    - protocol: TCP
      port: 9080
